# anki

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.check  requirements.txt  setup.py
.github/workflows/: checks.yml
anki/: lang.py
aqt/: __init__.py  profiles.py  utils.py
aqt_data/web/: editor.js  reviewer.js
qt/aqt/: __init__.py  browser.py  sound.py
