[tool.poetry]
name = "anki"
version = "0.1.0"
description = ""
authors = ["Ankitects Pty Ltd and contributors"]
license = "AGPL-3.0-or-later"
include = ["anki/buildhash.py", "anki/backend_pb2.py"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"
decorator = "^4.4.1"
protobuf = "^3.11.2"
psutil = { version = "^5.6.7", markers = "sys_platform == 'win32'" }
distro = { version = "^1.4.0", markers = "sys_platform != 'win32' and sys_platform != 'darwin'" }

[tool.poetry.dev-dependencies]
mypy = "^0.761"
mypy_protobuf = "^1.16"
# fixme: git until isort 5 is released, for black compat
isort = { git = "https://github.com/ankitects/isort", branch = "develop" }
# fixme: git until pylint switches to isort 5
pylint = { git = "https://github.com/ankitects/pylint" }
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
