[tool.poetry]
name = "aqt"
version = "0.1.0"
description = ""
authors = ["Ankitects Pty Ltd and contributors"]
license = "AGPL-3.0-or-later"
include = [
  "aqt/forms/*",
  "aqt_data/**/*",
]

[tool.poetry.dependencies]
python = "^3.6"
anki = "*"
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"
psutil = { version = "^5.6.7", markers = "sys_platform == 'win32'" }
send2trash = "^1.5.0"
pyaudio = "^0.2.11"
markdown = "^3.1.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
black = "^19.10b0"
nose2 = "^0.9.1"
# fixme: git until isort 5 is released, for black compat
isort = { git = "https://github.com/ankitects/isort", branch = "develop" }
# fixme: git until pylint switches to isort 5
pylint = { git = "https://github.com/ankitects/pylint" }
mock = "^3.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
